src/MinConsoleNative/Console.h

    EXPORT_FUNC_EX(HWND) MinGetConsoleWindow();
    //Initialize the console inside, don't worry.
    EXPORT_FUNC_EX(ConsoleSession) MinInitConsoleSession();
    //return true means successful enable VT!
    EXPORT_FUNC_EX(bool) MinEnableConsoleVT(HANDLE consoleOutput);
    EXPORT_FUNC_EX(Color24) MinGetConsolePalette(HANDLE consoleOutput, DWORD index);
    //Notice:After calling this API, the screen buffer will change!
    EXPORT_FUNC_EX(bool) MinSetConsolePalette(HANDLE consoleOutput, DWORD index, Color24 color);
    EXPORT_FUNC_EX(ConsoleMode) MinGetConsoleMode(HANDLE consoleInput, HANDLE consoleOutput);
    EXPORT_FUNC_EX(bool) MinSetConsoleMode(HANDLE consoleInput, HANDLE consoleOutput, ConsoleMode consoleMode);
    EXPORT_FUNC_EX(ConsoleFont) MinGetConsoleFont(HANDLE consoleOutput);
    EXPORT_FUNC_EX(bool) MinSetConsoleFont(HANDLE consoleOutput, ConsoleFont consoleFont);