src/MinConsoleNative/Timer.h

    EXPORT_FUNC MinInitTimer(_OUT_ MinTimer* timer);
    EXPORT_FUNC MinStartTimer(_REF_ MinTimer* timer);
    EXPORT_FUNC MinStopTimer(_REF_ MinTimer* timer);
    //To return the value in milliseconds, please set iterations to 1000
    EXPORT_FUNC MinTimeTimer(_IN_ const MinTimer* timer, _OUT_ double* deltaTime, int iterations);